Fix spacing for the last group and italic font for the placeholder rows

--- a/frontend/src/global_styles/content/_types_form_configuration.sass
+++ b/frontend/src/global_styles/content/_types_form_configuration.sass
@@ -67,9 +67,9 @@ body:has(.type-form-configuration-page)
   &--row-alignment-spacer
     min-width: var(--base-size-16)
     width: var(--base-size-16)
+    min-height: var(--control-small-size)
 
   &--drag-handle,
-  &--drag-spacer,
   &--actions
     align-self: flex-start
     justify-self: end
